[package]
name = "sljf-datastructure"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Merkle Patricia Tree data structure"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
serde_json = "1.0"
